changed image path

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <section id="product-listing">
-            <img src="D:/back.jpg" width=100% height="400">
+            <img src="back.jpg" width=100% height="400">
         </section>
     </main>
 
@@ -30,3 +30,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
