--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="D:/produ.jpg" width=100% height=100%>
+    <img src="produ.jpg" width=100% height=100%>
 </body>
+
 </html>
