--- a/cont.html
+++ b/cont.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="D:/contact.png" width=100% height=100%>
+    <img src="contact.png" width=100% height=100%>
 </body>
+
 </html>
