--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>My Awesome Shop</title>
   <link rel="stylesheet" href="style.css">
   <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-46B2WT8VB3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-1PVBQ1YZ16');
+    gtag('config', 'G-46B2WT8VB3');
   </script>
   <!-- End Google Analytics -->
 <body>
@@ -38,5 +38,6 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
