--- a/home.html
+++ b/home.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<>, initial-scale=1.0">
     <title>Document</title>
+      <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-46B2WT8VB3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-46B2WT8VB3');
+  </script>
+  <!-- End Google Analytics -->
 </head>
 <body>
     <img src="produ.jpg" width=100% height=100%>
 </body>
 
 </html>
+
