--- a/cont.html
+++ b/cont.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=<>, initial-scale=1.0">
     <title>Document</title>
       <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-46B2WT8VB3"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L0VY7BSKWN"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-46B2WT8VB3');
+    gtag('config', 'G-L0VY7BSKWN');
   </script>
   <!-- End Google Analytics -->
 </head>
@@ -19,4 +19,5 @@
 </body>
 
 </html>
+
 
